- fix padding in cards - fix break word in card - fix align center in card - fix add new card flow

--- a/src/pages/common/lesson/lesson.module.scss
+++ b/src/pages/common/lesson/lesson.module.scss
@@ -20,4 +20,8 @@
   justify-content: center;
   align-items: center;
   background-color: var(--face-color);
+  word-break: break-word;
+  hyphens: auto;
+  word-wrap: break-word;
+  text-align: center;
 }
